--- a/miniprogram/pages/home/enterInterview/enterInterview.wxml
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxml
@@ -1,7 +1,7 @@
 
 <cu-custom bgColor="bg-yellow" isBack="{{true}}" >
-	<view slot="content"></view>
-	<view slot="backText">模拟面试</view>
+	<view slot="content">模拟面试</view>
+	<view slot="backText"></view>
 </cu-custom>
 
 <view class="bank">
