--- a/miniprogram/pages/home/enterWritten/enterWritten.wxss
+++ b/miniprogram/pages/home/enterWritten/enterWritten.wxss
@@ -23,9 +23,9 @@
   top: 48rpx;
   width: 526rpx;
   color: rgba(16, 16, 16, 1);
+  line-height: 83rpx;
+  text-align: left;
   font-size: 56rpx;
-  line-height: 65rpx;
-  text-align: center;
   font-family: PingFangSC-regular;
 }
 
