--- a/miniprogram/pages/questionBank/answerInterviewQuestion/answerInterviewQuestion.wxml
+++ b/miniprogram/pages/questionBank/answerInterviewQuestion/answerInterviewQuestion.wxml
@@ -1,6 +1,6 @@
 <cu-custom bgColor="bg-yellow" isBack="{{true}}">
-	<view slot="content"></view>
-	<view slot="backText">面试</view>
+	<view slot="content">{{writtenBank.title}}</view>
+	<view slot="backText"></view>
 </cu-custom>
 <scroll-view scroll-y="{{modalName==null}}">
 
@@ -22,36 +22,37 @@
 					</view>
 				</view>
 				<view class="question-index-wrap">
-						<block wx:for="{{writtenBank.questions}}" wx:key="id">
-							<view  class="question-index correct" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
-						</block>
+					<block wx:for="{{writtenBank.questions}}" wx:key="id">
+						<view class="question-index correct" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
+					</block>
 				</view>
 			</view>
 		</view>
 		<view class="line">
 		</view>
 		<view class="bank">
-				<view class="radio-question">
-					<view class="quetion-title">
-						<text style="font-size: 40rpx;" >{{writtenBank.questions[questionIndex].id}}. {{writtenBank.questions[questionIndex].title}}</text>
-					</view>
-          <view wx:if="{{questionModal !== 'fighter'}}"  class="view-answer" bindtap="viewAnwser">
-            {{ifViewAnwser?'收起答案':'查看答案'}}
-					</view>
-					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
-						<view wx:if="{{writtenBank.questions[questionIndex].analyse}}">解析：{{writtenBank.questions[questionIndex].analyse}}</view>
-						<view>参考答案：<text class="text-yellow">{{writtenBank.questions[questionIndex].refer_answer}}</text></view> <br />
-					</view>
+			<view class="radio-question">
+				<view class="quetion-title">
+					<text style="font-size: 40rpx;" >{{writtenBank.questions[questionIndex].id}}. {{writtenBank.questions[questionIndex].title}}</text>
 				</view>
-		</view>
-		<view style="margin-top: 40rpx" class="line"></view>
-	</view>
-	<view class="next-size">
-				<view class="next-question chekckout-question" bindtap="handleNext">
-				{{questionIndex < writtenBank.questions.length - 1?'下一题':'查看总结'}}</view>
-			<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-			<view class="page-size">{{questionIndex + 1}}/{{writtenBank.questions.length}}
+				<view wx:if="{{questionModal !== 'fighter'}}" class="view-answer" bindtap="viewAnwser">
+					{{ifViewAnwser?'收起答案':'查看答案'}}
+				</view>
+				<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
+					<view wx:if="{{writtenBank.questions[questionIndex].analyse}}">解析：{{writtenBank.questions[questionIndex].analyse}}</view>
+					<view>参考答案：<text class="text-yellow">{{writtenBank.questions[questionIndex].refer_answer}}</text></view> <br />
+				</view>
 			</view>
+		</view>
 	</view>
 
 </scroll-view>
+		<view class="line"></view>
+	<view class="next-question chekckout-question" bindtap="handleNext">
+		{{questionIndex < writtenBank.questions.length - 1?'下一题':'查看总结'}}</view>
+	<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
+
+	<view class="next-size">
+		<view class="page-size">{{questionIndex + 1}}/{{writtenBank.questions.length}}
+		</view>
+	</view>
