--- a/miniprogram/pages/center/index/index.wxml
+++ b/miniprogram/pages/center/index/index.wxml
@@ -89,7 +89,7 @@
 			</view>
 			<view class="content">
 				<text>我的题库</text>
-				<text>进行中或已完成的练习和试卷</text>
+				<text>当前行业进行中或已完成的练习和试卷</text>
 			</view>
 		</view>
 		<view class="interview-current" bindtap="interviewCurrent">
@@ -98,7 +98,7 @@
 			</view>
 			<view class="content">
 				<text>面试现场</text>
-				<text>模拟面试保存的音频和视频</text>
+				<text>当前行业模拟面试保存的音频和视频</text>
 			</view>
 		</view>
 	</view>
@@ -112,6 +112,9 @@
 			<view class="content">
 				<text>我的消息</text>
 				<text>收到的回复、赞、系统通知</text>
+			</view>
+			<view wx:if="{{allMsgNum > 0}}" class="dot">
+				<text class="cuIcon-title text-yellow "></text>
 			</view>
 
 		</view>
