--- a/miniprogram/pages/home/score/score.wxml
+++ b/miniprogram/pages/home/score/score.wxml
@@ -1,8 +1,7 @@
 <!--miniprogram/pages/home/score/score.wxml-->
 <!-- 导航条不应该有返回的 -->
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" > 
-	<view slot="content">正确率</view>
-	<view slot="backText">模拟笔试</view>
+<cu-custom bgColor="bg-yellow"> 
+	<view slot="content">答题结果</view>
 </cu-custom>
 <view class="score1">{{finalCorrectRate}}</view>
 <view class="blank"></view>
@@ -21,7 +20,7 @@
 <view class="score6">{{questionTypesRate.blank}}</view>
 <view class="score7">{{questionTypesRate.sort}}</view>
 <navigator url="../index/index" open-type="switchTab"><button  class="button1">返回首页</button></navigator>
-<navigator url="../wrongAll/wrongAll?class=笔试"><button class="button2">查看试卷</button></navigator>
+<navigator url="../wrongAll/wrongAll?class=笔试&id={{id}}"><button class="button2">查看试卷</button></navigator>
 <!-- <van-row>
   <van-col span="8" offset="4">span: 8</van-col>
   <van-col span="8" offset="13">span: 8</van-col>
