--- a/miniprogram/pages/home/wrongAll/wrongAll.wxml
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxml
@@ -1,8 +1,8 @@
 <!--miniprogram/pages/home/wrongAll/wrongAll.wxml-->
 <scroll-view scroll-y="{{modalName==null}}">
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
-		<view slot="content">{{examBank.bank.title}}</view>
-		<view slot="backText">正确率</view>
+		<view slot="content">{{bank.title}}</view>
+		<view slot="backText"></view>
 	</cu-custom>
 	<wxs module="filter">
 		var isChecked = function(key, data, correct_data) {
@@ -14,17 +14,31 @@
 				return false;
 			}
 		}
+				var isLike = function(id, arr) {
+			var like = false
+			if (arr.length > 0) {
+				for(var i = 0; i < arr.length; i++) {
+					if (id == arr[i].userId) {
+						like = true
+					}
+				}
+				return like
+			} else {
+				return false;
+			}
+		}
 		module.exports = {
-			isChecked: isChecked
+			isChecked: isChecked,
+			isLike: isLike
 		}
 	</wxs>
 	<view class="bank-wrap">
 		<view class="bank-title">
-			<text>{{examBank.bank.title}} </text>
+			<text>{{bank.title}} </text>
 			<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
 		</view>
 		<view class="score-time">
-			<text class="time">时间：{{examBank.bank.limit_time}}分钟</text>
+			<text class="time">时间：{{bank.limit_time}}分钟</text>
 		</view>
 		<view class="menu" bindtap="handleMenu" data-target="Modal">
 			<text class="cuIcon-apps lg text-yellow"></text>
@@ -32,7 +46,7 @@
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
 			<view class="cu-dialog" catchtap>
 				<view class="cu-bar bg-white justify-end">
-					<view wx:if="{{examBank.wrongList.length > 0}}" class="cu-btn bg-yellow" bindtap="checkType">
+					<view wx:if="{{wrongList.length > 0}}" class="cu-btn bg-yellow" bindtap="checkType">
 						{{ifViewWrong?'完整试卷':'只看错题'}}
 					</view>
 					<view class="action" bindtap="hideModal">
@@ -41,12 +55,12 @@
 				</view>
 				<view class="question-index-wrap">
 					<block wx:if="{{ifViewWrong}}">
-						<block wx:for="{{examBank.bank.bank}}" wx:key="index">
+						<block wx:for="{{bank.bank}}" wx:key="index">
 							<view wx:if="{{item.mistaked}}" class="question-index {{item.mistaked?'wrong':'correct'}}" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
 						</block>
 					</block>
 					<block wx:else>
-						<block wx:for="{{examBank.bank.bank}}" wx:key="id">
+						<block wx:for="{{bank.bank}}" wx:key="id">
 							<view class="question-index {{item.mistaked?'wrong':'correct'}}" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
 						</block>
 					</block>
@@ -57,104 +71,104 @@
 		<view class="line">
 		</view>
 		<view class="bank" wx:key="id">
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '单选'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【单选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
 					</view>
-					<radio-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
-						<label wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<!-- key === examBank.chooseValue[questionIndex]：如果用户所选的答案跟当前的的选择题选项匹配，则代表用户做出了自己的选择；key === examBank.bank.bank[questionIndex].correct_answer[0]：如果当前选择题的选项跟正确答案匹配，则代表此时用户 -->
-							<!-- <radio disabled checked="{{key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0]}}" class="{{examBank.bank.bank[questionIndex].mistaked&&(key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0])?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}"> -->
-							<radio disabled checked="{{key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0]}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
+					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<!-- key === chooseValue[questionIndex]：如果用户所选的答案跟当前的的选择题选项匹配，则代表用户做出了自己的选择；key === bank.bank[questionIndex].correct_answer[0]：如果当前选择题的选项跟正确答案匹配，则代表此时用户 -->
+							<!-- <radio disabled checked="{{key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked&&(key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0])?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}"> -->
+							<radio disabled checked="{{key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view wx:if="{{examBank.bank.bank[questionIndex].parsing}}">解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view wx:if="{{bank.bank[questionIndex].parsing}}">解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '多选'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '多选'}}">
 				<view class="checkbox-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【多选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【多选】</text>
 					</view>
-					<checkbox-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
-						<label class="my-choosebox" wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}} no-checkbox" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex],examBank.bank.bank[questionIndex].correct_answer)}}">
+					<checkbox-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} no-checkbox" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex],bank.bank[questionIndex].correct_answer)}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
 					</checkbox-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view wx:if="{{examBank.bank.bank[questionIndex].parsing}}">解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view wx:if="{{bank.bank[questionIndex].parsing}}">解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '不定项选'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '不定项选'}}">
 				<view class="checkbox-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【不定项选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【不定项选】</text>
 					</view>
-					<checkbox-group bindchange="checkboxChange" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" class="checkbox-group">
-						<label class="my-choosebox" wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex],examBank.bank.bank[questionIndex].correct_answer)}}">
+					<checkbox-group bindchange="checkboxChange" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex],bank.bank[questionIndex].correct_answer)}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
 					</checkbox-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view wx:if="{{examBank.bank.bank[questionIndex].parsing}}">解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view wx:if="{{bank.bank[questionIndex].parsing}}">解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '判断'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【判断】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【判断】</text>
 					</view>
-					<radio-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
-						<label wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled checked="{{key === examBank.chooseValue[questionIndex] || key === examBank.bank.bank[questionIndex].correct_answer[0]}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
+					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<radio disabled checked="{{key === chooseValue[questionIndex] || key === bank.bank[questionIndex].correct_answer[0]}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} radio no-radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view wx:if="{{examBank.bank.bank[questionIndex].parsing}}">解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view wx:if="{{bank.bank[questionIndex].parsing}}">解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '填空'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '填空'}}">
 				<view class="blank-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【填空】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【填空】</text>
 					</view>
 
-					<view class="yourblank" bindtap="handleTap" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}">
-						你的答案: <text class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{examBank.chooseValue[questionIndex]}}</text>
+					<view class="yourblank" bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}">
+						你的答案: <text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{chooseValue[questionIndex]}}</text>
 					</view>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view wx:if="{{examBank.bank.bank[questionIndex].parsing}}">解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view wx:if="{{bank.bank[questionIndex].parsing}}">解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '排序'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '排序'}}">
 				<view class="sort-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【排序】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【排序】</text>
 					</view>
-					<view wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+					<view wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
 						<block wx:if="{{value != ''}}">
 							<view style="height: 50rpx;">
 								<text>{{key}}. {{value}}</text>
@@ -162,20 +176,20 @@
 						</block>
 					</view>
 					<view class="yourblank" style="margin-top: 25rpx">
-						<text>你的答案:</text> <text style="display:inline-block" data-type="{{examBank.bank.bank[questionIndex].type}}" class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
-						{{examBank.chooseValue[questionIndex]}}
+						<text>你的答案:</text> <text style="display:inline-block" data-type="{{bank.bank[questionIndex].type}}" class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
+						{{chooseValue[questionIndex]}}
 						</text>
 					</view>
 					<view class="correct-analyse">
 						<view>正确答案：<text  class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view wx:if="{{examBank.bank.bank[questionIndex].parsing}}">解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view wx:if="{{bank.bank[questionIndex].parsing}}">解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 			</block>
 		</view>
 		<view style="margin-top: 40rpx" class="line"></view>
-		<view class="comments">
-			<view class="comment" wx:for="{{examBank.bank.bank[questionIndex].comments}}" wx:key="user_id">
+		<!-- <view class="comments">
+			<view class="comment" wx:for="{{bank.bank[questionIndex].comments}}" wx:key="user_id">
 				<block wx-if="{{ifViewAllComments||index === 0}}">
 					<view class="user">
 						<view class="user-info">
@@ -197,21 +211,56 @@
 				<input placeholder="发表你对这道题的想法"></input>
 				<view class="publish-comment">提交</view>
 			</view>
+		</view> -->
+		<view class="comments">
+			<view class="comment" wx:for="{{bank.bank[questionIndex].comments}}" wx:key="index">
+				<block wx-if="{{ifViewAllComments||index === 0}}">
+					<view class="user">
+						<view class="user-info" id="{{item.user_id}}" bindtap="handleReplay" data-commentid="{{item.commentId}}" data-index="{{index}}" data-name="{{item.user_name}}">
+							<image class="mine" src="{{item.avatar}}"></image>
+							<view class="user-name">{{item.user_name}} </view>
+						</view>
+						<view class="like-dot" id="{{item.user_id}}" data-index="{{index}}" bindtap="handleLike">
+								<text class="like cuIcon-appreciatefill {{filter.isLike(item.user_id,item.spot_count)? 'text-yellow' : 'text-grey'}}"></text>
+							<view class="dot-num">{{item.spot_count.length}}</view>
+						</view>
+					</view>
+					<view class="content">{{item.content}}
+						<view class="replay" data-index="{{index}}" data-commentid="{{item.commentId}}" bindtap="handleReplay" >
+							<block wx:for="{{item.reply}}" wx:key="index">
+							<view class="replay-info" data-name="{{item.user_name}}" id="{{item.user_id}}">
+								<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-name">{{item.user_name}}: </text>
+								<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-content">{{item.content}} </text>
+							</view>
+							</block>
+						</view>
+					</view>
+					<view class="createtime">{{item.create_time}}
+					</view>
+				</block>
+			</view>
+			<view class="view-all" bindtap="viewAllComments">
+				{{ifViewAllComments?'收起评论':'查看全部评论'}}</view>
+			<view class="publish">
+				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
+				<view bindtap="handlePublish" class="publish-comment">提交</view>
+			</view>
 		</view>
+
 	</view>
 	<view class="next-size">
 		<block wx:if="{{ifViewWrong}}">
 			<view class="next-question chekckout-question" bindtap="handleNext">
-				{{wrongIndex < examBank.wrongList.length - 1?'下一题':'查看总分'}}</view>
+				{{wrongIndex < wrongList.length - 1?'下一题':'查看总分'}}</view>
 			<view wx:if="{{wrongIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-			<view class="page-size">{{wrongIndex + 1}}/{{examBank.wrongList.length}}
+			<view class="page-size">{{wrongIndex + 1}}/{{wrongList.length}}
 			</view>
 		</block>
 		<block wx:else>
 			<view class="next-question chekckout-question" bindtap="handleNext">
-				{{questionIndex < examBank.bank.bank.length - 1?'下一题':'查看总分'}}</view>
+				{{questionIndex < bank.bank.length - 1?'下一题':'查看总分'}}</view>
 			<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-			<view class="page-size">{{questionIndex + 1}}/{{examBank.bank.bank.length}}
+			<view class="page-size">{{questionIndex + 1}}/{{bank.bank.length}}
 			</view>
 		</block>
 	</view>
