--- a/miniprogram/pages/home/wrongAll/wrongAll.wxss
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxss
@@ -6,20 +6,20 @@ scroll-view{
   background-color: rgba(255, 255, 255, 1);
 }
 .menu {
-  position: absolute;
-  left: 668rpx;
-  top: 18vh;
+  float: right;
   width: 64rpx;
   height: 64rpx;
   font-size: 62rpx;
+  line-height: 62rpx;
 }
 .bank-wrap {
   background: white;
-  padding-bottom: 150rpx;
+  padding-bottom: 8vh;
 }
 .bank-title {
   margin-left: 34rpx;
   padding-top: 42rpx;
+  height: 10vh;
   color: rgba(16, 16, 16, 1);
   font-size: 50rpx;
   text-align: left;
@@ -27,13 +27,13 @@ scroll-view{
 }
 .score-time {
   margin-left: 34rpx;
-  margin-top: 27rpx;
   margin-bottom: 30rpx;
   height: 40rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 28rpx;
   text-align: left;
   font-family: PingFangSC-regular;
+  display: inline-block;
 }
 .line {
   width: 750rpx;
@@ -76,9 +76,14 @@ scroll-view{
 }
  .my-choosebox checkbox {
   transform: scale(0.6);
-  /* border: 4rpx solid transparent; */
   border: 4rpx solid rgba(250, 191, 1, 1);
   background: transparent;
+}
+radio .wx-radio-input.wx-radio-input-disabled {
+  background: white;
+}
+checkbox .wx-checkbox-input.wx-checkbox-input-disabled {
+  background: white;
 }
 .my-choosebox .no-checkbox {
   border: 4rpx solid rgba(250, 191, 1, 1);
@@ -113,7 +118,7 @@ checkbox.red {
   text-align: left;
   font-family: PingFangSC-regular;
 }
-.comments {
+/* .comments {
   padding: 30rpx;
   height: 203rpx;
 }
@@ -228,6 +233,144 @@ checkbox.red {
   bottom: 10rpx;
   left: 50%;
   transform: translateX(-50%);
+} */
+.comments {
+  padding: 30rpx;
+  padding-bottom: 0;
+}
+.comment {
+  position: relative;
+}
+.comment .user {
+  display: flex;
+  justify-content: space-between;
+}
+.like-dot, .user-info {
+  display: flex;
+}
+.user-info .user-name {
+  margin-left: 26rpx;
+  line-height: 60rpx;
+}
+.like-dot {
+  margin-right: 20rpx;
+}
+.like-dot .dot-num {
+  line-height: 55rpx;
+}
+
+.comment .mine {
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 100%;
+}
+.comment .like {
+  font-size: 43rpx;
+  padding-right: 10rpx;
+}
+.comment .content {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  padding: 20rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  word-break: break-all;
+  color: #aaa;
+  padding-left: 83rpx;
+  padding-top: 0;
+}
+.comment .createtime {
+  padding-left: 83rpx;
+  color: #ccc;
+}
+
+.replay .replay-info {
+  padding-left: 20rpx;
+  padding-top: 30rpx;
+  font-size: 25rpx;
+}
+.replay .replay-info .replay-name {
+  color: rgba(16, 16, 16, 1);
+  font-family: SourceHanSansSC-regular;
+}
+
+.view-all {
+  height: 60rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  text-decoration: underline;
+  margin-top: 10rpx;
+}
+.publish {
+  position: relative;
+}
+.publish input {
+  position: absolute;
+  left: 19rpx;
+  padding-right: 193rpx;
+  padding-left: 1em;
+  width: 688rpx;
+  height: 76rpx;
+  color: rgba(136, 136, 136, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFang SC;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+}
+.publish .publish-comment {
+  position: absolute;
+  left: 530rpx;
+  top: 6rpx;
+  width: 150rpx;
+  height: 62rpx;
+  border-radius: 10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(163, 163, 163, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(163, 163, 163, 1);
+}
+.next-size {
+  position: relative;
+  background: white;
+  height: 11vh
+}
+.chekckout-question {
+  width: 164rpx;
+  height: 72rpx;
+  border-radius: 20rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(0, 0, 0, 1);
+  line-height: 72rpx;
+}
+.next-question {
+  float: right;
+  margin-right: 40rpx;
+}
+.pre-question {
+  float: left;
+  margin-left: 40rpx;
+}
+.page-size {
+  margin: 0 auto;
+  width: 60rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  padding-top: 100rpx;
 }
 
 .wrong-blank {
@@ -276,10 +419,4 @@ checkbox.red {
 .question-index-wrap .wrong {
   border: 2rpx solid red;
   color: rgb(250, 1, 1);
-}
-radio .wx-radio-input.wx-radio-input-disabled {
-  background: white;
-}
-checkbox .wx-checkbox-input.wx-checkbox-input-disabled {
-  background: white;
 }
