--- a/miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxml
+++ b/miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxml
@@ -1,7 +1,6 @@
 <!--miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxml-->
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
-	<view slot="content"></view>
-	<view slot="backText">面试</view>
+<cu-custom bgColor="bg-yellow">
+	<view slot="content">答题结果</view>
 </cu-custom>
 <view class="blankBox"></view>
 <view class="answer1">面试常见评分标准：
